parent child grouping

--- a/Day-1/parent-child-grouping.html
+++ b/Day-1/parent-child-grouping.html
@@ -35,14 +35,26 @@
             <p>siblings3</p>
 
             <ul>
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
+                  <li>a</li>
+                  <li>b</li>
+                  <li>c</li>
+                  <li>d</li>
+                  <li>e</li>
             </ul>
       </div>
      </div>
-
+     <div><h1>Grouping</h1>
+      <div>
+            <nav>
+                  <ul>
+                        <li>Sanhil<a href=""></a></li>
+                        <li>Aashu<a href=""></a></li>
+                  </ul>
+            </nav>
+            <footer>
+                  <p>created by ❤️</p>
+            </footer>
+      </div>
+</div>
 </body>
 </html>
