--- a/HTML/12-forms.html
+++ b/HTML/12-forms.html
@@ -8,9 +8,41 @@
 </head>
 <body>
       <h1>Person Details</h1>
-      <form action="">
-            <input type="text" name="firstname" id="firstname">
+      <form action="" >
             <label for="firstname">firstName</label>
-      </form>
+            <input type="text" name="firstname" id="firstname">
+            <br>
+            <label for="mob">mobile-Num</label>
+            <input type="number" name="" id="mob">
+            <br>
+            <label for="dob">DOB</label>
+            <input type="date" name="" id="dob">
+            <br>
+            <label for="email">Email</label>
+            <input type="email" id="email">
+            <br>
+            <span>Gender</span> 
+            <br>
+            <label for="male">Male</label>
+            <input type="radio" name="Gender" id="male"><br>
+            <label for="female">Female</label>
+            <input type="radio" name="Gender" id="female"><br>
+            <label for="check">Work is completed</label>
+            <input type="checkbox" id="check">
+            <br>
+            <label for="courses">Select courses</label>
+            <select name="course" id="courses">
+                  <option value="js">JS</option>
+                  <option value="cplus">C++</option>
+                  <option value="c">C</option>
+                  <option value="csharp">C#</option>
+            </select>
+
+
+            <br><br><br><br><br>
+            <input type="reset">
+            <input type="submit"> 
+            
+            </form>
 </body>
 </html>
