--- a/HTML/5-practise.html
+++ b/HTML/5-practise.html
@@ -20,8 +20,8 @@
      <div>
       <form action="">
             <label for="name">Name:</label><input type="text" placeholder="name"><br/>
-            <label for="number">Number</label><input type="text" placeholder="mobile" pattern="[0-9]"><br/>
-            <label for="email">Email</label><input type="text" placeholder="@gmail.com" pattern="[a-z0-9._%+-]+@gmail\.com$"><br/>
+            <label for="number">Number</label><input type="number" placeholder="mobile"><br/>
+            <label for="email">Email</label><input type="email" placeholder="@gmail.com"><br/>
             <button type="submit">Submit</button>
       </form>
      </div>
