--- a/Projects/Website-with-Login-Register/registration.html
+++ b/Projects/Website-with-Login-Register/registration.html
@@ -19,7 +19,6 @@
                   </div>
                   <nav>
                         <ul>
-                              <a href="index.html">Sanhil</a>
                               <li class="link"><a href="#">Sanhil</a></li>
                               <li class="link"><a href="#">Sanhil</a></li>
                               <li class="link"><a href="#">Sanhil</a></li>
@@ -31,13 +30,65 @@
                   <section class="user-container login-section--display">
                         <div class="registration">
                               <div class="grid-two-cloumn">
-                                    <div class="form-text"></div>
-                                    <h2>Welcome Back!</h2>
-                                    <p>To keep connected with us please login with your personal details</p>
-                                    <button class="registration-btn">Login here</button>
+                                    <div class="form-text">
+                                          <h2>Welcome Back!</h2>
+                                          <p>To keep connected with us please login with your personal details</p>
+                                          <button class="registration-btn">Login here</button>
+                                    </div>
+                                    <div class="registration-form">
+                                          <h2>Create Account</h2>
+                                          <div class="social-icons">
+                                                <a href="https://discord.com/channels/@me/1057349331906211931"
+                                                      target="_blank">
+                                                      <i class="fa-brands fa-discord"></i></a>
+                                                <a href="https://www.linkedin.com/in/sanhilrai143/" target="_blank">
+                                                      <i class="fa-brands fa-linkedin"></i></a>
+                                                <a href="https://www.instagram.com/__sanhil__/" target="_blank">
+                                                      <i class="fa-brands fa-instagram"></i></a>
+                                                <a href="https://twitter.com/SanhilRai" target="_blank">
+                                                      <i class="fa-brands fa-twitter"></i></a>
+                                          </div>
+                                          <p>or use your email for registration</p>
+                                          <form action="#">
+                                                <div class="input-field">
+                                                      <label for="username">
+                                                            <input type="text" name="#" id="username"
+                                                                  placeholder="name"></label>
+                                                </div>
+
+                                                <div class="input-field">
+
+                                                      <label for="email">
+                                                            <input type="email" name="#" id="email" placeholder="email">
+                                                      </label>
+                                                </div>
+
+                                                <div class="input-field">
+
+                                                      <label for="password">
+                                                            <input type="password" name="#" id="password"
+                                                                  placeholder="password">
+                                                      </label>
+                                                </div>
+                                                <div class="input-field">
+                                                      <input type="submit" value="register">
+                                                </div>
+
+                                    </div>
+                                    </form>
                               </div>
-                              <div class="registration-form">
-                                    <h2>Create Account</h2>
+                        </div>
+                        </div>
+
+                        <div class="login">
+                              <div class="grid-two-cloumn">
+                                    <div class="form-text">
+                                    <h2>Hello Friends</h2>
+                                    <p>Enter your personal details and start your journey with us</p>
+                                    <button class="registration-btn">Register here</button>
+                              </div>
+                              <div class="login-form">
+                                    <h2>sign in</h2>
                                     <div class="social-icons">
                                           <a href="https://discord.com/channels/@me/1057349331906211931"
                                                 target="_blank">
@@ -49,30 +100,30 @@
                                           <a href="https://twitter.com/SanhilRai" target="_blank">
                                                 <i class="fa-brands fa-twitter"></i></a>
                                     </div>
-                                    <p>or use your email for registration</p>
+                                    <p>or use your account</p>
                                     <form action="#">
-                                          <div class="input-field">
-                                                <label for="username">
-                                                <input type="text" name="#" id="username" placeholder="name"></label>
-                                          </div>
 
                                           <div class="input-field">
 
-                                                <label for="email">
-                                                      <input type="email" name="#" id="email" placeholder="email">
+                                                <label for="email1">
+                                                      <input type="email" name="#" id="email1" placeholder="email">
                                                 </label>
                                           </div>
 
                                           <div class="input-field">
 
-                                                <label for="password">
-                                                      <input type="password" name="#" id="password" placeholder="password">
+                                                <label for="password1">
+                                                      <input type="password" name="#" id="password1"
+                                                            placeholder="password">
                                                 </label>
                                           </div>
-
+                                          <div class="input-field">
+                                                <input type="submit" value="login">
                                           </div>
-                                    </form>
+
                               </div>
+                              </form>
+                        </div>
                         </div>
                         </div>
                   </section>
