--- a/Projects/Website-with-Login-Register/index.html
+++ b/Projects/Website-with-Login-Register/index.html
@@ -3,10 +3,36 @@
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Website</title>
-      <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+      <title>home</title>
+      <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
+      <link rel="stylesheet" href="style.css">
 </head>
 <body>
-      
+      <header class="registeration-header">
+            <div class="container">
+                  <div class="logo">
+                        <a href="#">Developed by<span style="color:red;"> Sanhil❤️ </span></a>
+                  </div>
+                  <nav>
+                        <ul>
+                              <li class="link"><a href="index.html">home</a></li>
+                              <li class="link"><a href="#">blogs</a></li>
+                              <li class="link"><a href="#">about</a></li>
+                              <li class="link"><a href="registration.html">Register</a></li>
+                        </ul>
+                  </nav>
+            </div>
+            <main>
+                  <section class="hero-section">
+                        <div class="container">
+                              <div class="hero-content">
+                                    <p>creative agency with a passion</p>
+                                    <h1>Professional Personal Digital Marketing</h1>
+                                    <button>Explore Now</button>
+                              </div>
+                        </div>
+                  </section>
+            </main>
+      </header>
 </body>
 </html>
