--- a/Projects/Website-with-Login-Register/registration.html
+++ b/Projects/Website-with-Login-Register/registration.html
@@ -8,6 +8,7 @@
             integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
       <link rel="stylesheet" href="style.css">
+      <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
       <title>Registration</title>
 </head>
 
@@ -15,13 +16,13 @@
       <header class="registeration-header">
             <div class="container">
                   <div class="logo">
-                        <a href="index.html">Sanhil</a>
+                        <a href="#">Developed by<span style="color:red;"> Sanhil❤️ </span></a>
                   </div>
                   <nav>
                         <ul>
-                              <li class="link"><a href="#">Sanhil</a></li>
-                              <li class="link"><a href="#">Sanhil</a></li>
-                              <li class="link"><a href="#">Sanhil</a></li>
+                              <li class="link"><a href="index.html">home</a></li>
+                              <li class="link"><a href="#">blogs</a></li>
+                              <li class="link"><a href="#">about</a></li>
                               <li class="link"><a href="registration.html">Register</a></li>
                         </ul>
                   </nav>
@@ -33,10 +34,10 @@
                                     <div class="form-text">
                                           <h2>Welcome Back!</h2>
                                           <p>To keep connected with us please login with your personal details</p>
-                                          <button class="registration-btn">Login here</button>
+                                          <button class="login-btn">Login here</button>
                                     </div>
                                     <div class="registration-form">
-                                          <h2>Create Account</h2>
+                                          <h2>Sign Up</h2>
                                           <div class="social-icons">
                                                 <a href="https://discord.com/channels/@me/1057349331906211931"
                                                       target="_blank">
@@ -83,52 +84,56 @@
                         <div class="login">
                               <div class="grid-two-cloumn">
                                     <div class="form-text">
-                                    <h2>Hello Friends</h2>
-                                    <p>Enter your personal details and start your journey with us</p>
-                                    <button class="registration-btn">Register here</button>
-                              </div>
-                              <div class="login-form">
-                                    <h2>sign in</h2>
-                                    <div class="social-icons">
-                                          <a href="https://discord.com/channels/@me/1057349331906211931"
-                                                target="_blank">
-                                                <i class="fa-brands fa-discord"></i></a>
-                                          <a href="https://www.linkedin.com/in/sanhilrai143/" target="_blank">
-                                                <i class="fa-brands fa-linkedin"></i></a>
-                                          <a href="https://www.instagram.com/__sanhil__/" target="_blank">
-                                                <i class="fa-brands fa-instagram"></i></a>
-                                          <a href="https://twitter.com/SanhilRai" target="_blank">
-                                                <i class="fa-brands fa-twitter"></i></a>
+                                          <h2>Hello Friends</h2>
+                                          <p>Enter your personal details and start your journey with us</p>
+                                          <button class="registration-btn">Register here</button>
                                     </div>
-                                    <p>or use your account</p>
-                                    <form action="#">
-
-                                          <div class="input-field">
-
-                                                <label for="email1">
-                                                      <input type="email" name="#" id="email1" placeholder="email">
-                                                </label>
+                                    <div class="login-form">
+                                          <h2>Sign In</h2>
+                                          <div class="social-icons">
+                                                <a href="https://discord.com/channels/@me/1057349331906211931"
+                                                      target="_blank">
+                                                      <i class="fa-brands fa-discord"></i></a>
+                                                <a href="https://www.linkedin.com/in/sanhilrai143/" target="_blank">
+                                                      <i class="fa-brands fa-linkedin"></i></a>
+                                                <a href="https://www.instagram.com/__sanhil__/" target="_blank">
+                                                      <i class="fa-brands fa-instagram"></i></a>
+                                                <a href="https://twitter.com/SanhilRai" target="_blank">
+                                                      <i class="fa-brands fa-twitter"></i></a>
                                           </div>
+                                          <p>or use your account</p>
+                                          <form action="#">
 
-                                          <div class="input-field">
+                                                <div class="input-field">
 
-                                                <label for="password1">
-                                                      <input type="password" name="#" id="password1"
-                                                            placeholder="password">
-                                                </label>
-                                          </div>
-                                          <div class="input-field">
-                                                <input type="submit" value="login">
-                                          </div>
+                                                      <label for="email1">
+                                                            <input type="email" name="#" id="email1"
+                                                                  placeholder="email">
+                                                      </label>
+                                                </div>
 
+                                                <div class="input-field">
+
+                                                      <label for="password1">
+                                                            <input type="password" name="#" id="password1"
+                                                                  placeholder="password">
+                                                      </label>
+                                                </div>
+                                                <div class="input-field">
+                                                      <input type="submit" value="login">
+                                                </div>
+
+                                    </div>
+                                    </form>
                               </div>
-                              </form>
-                        </div>
                         </div>
                         </div>
                   </section>
             </main>
       </header>
+
+      <script src="./server.js"></script>
+      
 </body>
 
 </html>
