--- a/Projects/Website-with-Login-Register/index.html
+++ b/Projects/Website-with-Login-Register/index.html
@@ -8,6 +8,8 @@
       <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+      <!-- home page -->
       <header class="registeration-header">
             <div class="container">
                   <div class="logo">
